# Agentix

./: README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: publish.yml
agentix/: LICENSE  README.md  __init__.py  main.py  pyproject.toml
