[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agentix"
version = "0.1.0"
description = "Agentix — An agentic AI powered CLI tool"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "Najaf Ali", email = "najafali32304@gmail.com" }
]

dependencies = [
  "rich",
  "typer",
]

[project.scripts]
agentix = "agentix.cli:app"
